# fast_cpp

./: .gitignore  .project.config.json  CMakeLists.txt  CorePackages.cmake  README.md  config.py  fcpp.py  fcpp.spec  requirements.txt  tools.py  tree  utils.py
.defaults/: class.cpp.default  main.cpp.default
.templates/: CMakeLists.app.template  CMakeLists.core.template  CMakeLists.main.template
app/: CMakeLists.txt  main.cpp
apps/asd/: CMakeLists.txt  main.cpp
apps/djsg/: main.cpp
apps/sdf/: CMakeLists.txt  main.cpp
apps/sdfg/src/subdir/: class.cpp
core/: CMakeLists.txt
core/include/core/: class.hpp
core/src/core/: class.cpp
